welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: not found: value &&
  else if ((a==b)||(b==c)||(c==a))&&((a!=b)||(b!=c)||(c!=a)){
                                  ^